<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@color/soul_bg"
    tools:context=".MainActivity">

    <TextView android:id="@+id/tvExplicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/escribe_nombre"
        style="@style/tvStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvExplicacion"/>

    <Button android:id="@+id/btnSix"
        android:backgroundTint="?attr/colorSecondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="6.ME: "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombre" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/btnSix"
        android:orientation="horizontal">
        <Button android:id="@+id/btnFive"
            android:backgroundTint="?attr/colorSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="5.TF: "/>
        <Button android:id="@+id/btnOne"
            android:backgroundTint="?attr/colorSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="1.KF: "/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout android:id="@+id/lyStar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:gravity="center"
        android:backgroundTint="@color/white"
        android:background="@drawable/hexagram"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSix">

    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        app:layout_constraintTop_toBottomOf="@+id/btnSix"
        android:orientation="horizontal">
        <Button android:id="@+id/btnFour"
            android:backgroundTint="?attr/colorSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="4.TE: "/>
        <Button android:id="@+id/btnTwo"
            android:backgroundTint="?attr/colorSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="2.KE: "/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button android:id="@+id/btnThree"
        android:backgroundTint="?attr/colorSecondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3.TF: "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyStar" />

    <LinearLayout android:id="@+id/lySignificado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnThree">
        <TextView style="@style/tvStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/karma_fisico"/>
        <TextView style="@style/tvStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/karma_esp"/>
        <TextView style="@style/tvStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/talento_fisico"/>
        <TextView style="@style/tvStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/talento_esp"/>
        <TextView style="@style/tvStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mision_fisico"/>
        <TextView style="@style/tvStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mision_esp"/>
    </LinearLayout>

    <Button android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lySignificado" />

    <Button android:id="@+id/btnBorrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/borrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular" />
</androidx.constraintlayout.widget.ConstraintLayout>